move solution's names from top to bottom of the picture on each solution page. and make them clickable if someone click any where on the div Imported from Changeset 2409

--- a/WarehouseEcommerce/Views/Home/BusinessIntelligence.cshtml
+++ b/WarehouseEcommerce/Views/Home/BusinessIntelligence.cshtml
@@ -58,82 +58,94 @@
     <div class="container-fluid pl-30 pr-30">
         <div class="row">
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center">
-                    <div class="service-text">
-                        <h4><a href="warehouse-management-system">Warehouse Management</a></h4>
+                <a href="warehouse-management-system">
+                    <div class="single-service text-center">
+                        <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Warehouse Management
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="warehouse-management-system"><img src="~/img/solutions/Warehouse_management.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="stock-control-system">Stock Control</a></h4>
+                <a href="stock-control-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Stock_control.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Stock Control
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Accurate real time stock visibility across multiple sites and locations.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Accurate real time stock visibility across multiple sites and locations.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="epod-system">EPoD</a></h4>
+                <a href="epod-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                EPoD
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="digital-signage">Digital Signage</a></h4>
+                <a href="digital-signage">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Digital_signage.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Digital Signage
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>llumineye designed to make high-quality digital signage available to everyone. Ideal for retail, transportation.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="digital-signage"><img src="~/img/solutions/Digital_signage.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>llumineye designed to make high-quality digital signage available to everyone. Ideal for retail, transportation.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="real-time-location-system">RFID-IoT</a></h4>
+                <a href="real-time-location-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Rfid.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                RFID-IoT
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>RFID Enabled item-level visibility of inventory across the enterprise. TrueVUE provides the foundation for Unified Commerce.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="real-time-location-system"><img src="~/img/solutions/Rfid.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>RFID Enabled item-level visibility of inventory across the enterprise. TrueVUE provides the foundation for Unified Commerce.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="ecommerce">eCommerce</a></h4>
+                <a href="ecommerce">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                eCommerce
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace integration.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace integration.</p>
-                    </div>
-                </div>
+                </a>
             </div>
 
         </div>
