--- a/WarehouseEcommerce/Views/Home/CourierIntegration.cshtml
+++ b/WarehouseEcommerce/Views/Home/CourierIntegration.cshtml
@@ -62,85 +62,95 @@
     <div class="container-fluid pl-30 pr-30">
         <div class="row">
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center">
-                    <div class="service-text">
-                        <h4><a href="mobile-device-management">Mobile Device Management</a></h4>
+                <a href="mobile-device-management">
+                    <div class="single-service text-center">
+                        <div class="service-icon"><img src="~/img/solutions/Mobile_device_management.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Mobile Device Management
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>MDM enables you to manage devices in a way which best suits your organisation security and support needs.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="mobile-device-management"><img src="~/img/services/media/mdm.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>MDM enables you to manage devices in a way which best suits your organisation security and support needs.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="stock-control-system">Stock Control</a></h4>
+                <a href="stock-control-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Stock Control
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Accurate real time stock visibility across multiple sites and locations.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Accurate real time stock visibility across multiple sites and locations.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="epod-system">EPoD</a></h4>
+                <a href="epod-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
+                        <div class="service-text">
+                            <h3>EPoD</h3>
+                        </div>
+                        <div class="service-text">
+                            <p>
+                                Provides reliable and accurate proof of delivery and collection, enabling signature and image
+                                capture.
+                            </p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>
-                            Provides reliable and accurate proof of delivery and collection, enabling signature and image
-                            capture.
-                        </p>
-                    </div>
-                </div>
+                </a><
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="mobile-van-sales">Mobile Van Sales</a></h4>
+                <a href="mobile-van-sales">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Mobile_van_sales.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Mobile Van Sales
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Van sales solution effectively manages on-the-road sales operations and payments.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="mobile-van-sales"><img src="~/img/services/media/mobilevansales.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Van sales solution effectively manages on-the-road sales operations and payments.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="yard-management">Yard Management</a></h4>
+                <a href="yard-management">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Yard_management.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Yard Management
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Optimize Your Yard Resources with Intelligent, system-directed dock door management capabilities.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="yard-management"><img src="~/img/services/media/yardmanagement.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Optimize Your Yard Resources with Intelligent, system-directed dock door management capabilities.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="fleet-management-system">Fleet Tracking</a></h4>
+                <a href="fleet-management-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Fleet_tracking.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Fleet Tracking
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Visualize your Fleet assets and activity at a glance with live dashboards, mapping and historical driver data.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="fleet-management-system"><img src="~/img/services/media/fleettracking.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Visualize your Fleet assets and activity at a glance with live dashboards, mapping and historical driver data.</p>
-                    </div>
-                </div>
+                </a>
             </div>
 
         </div>
