--- a/WarehouseEcommerce/Views/Home/DigitalSignage.cshtml
+++ b/WarehouseEcommerce/Views/Home/DigitalSignage.cshtml
@@ -142,82 +142,94 @@
     <div class="container-fluid pl-30 pr-30">
         <div class="row">
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center">
-                    <div class="service-text">
-                        <h4><a href="epod-system">EPOS & Self Service</a></h4>
+                <a href="epod-system">
+                    <div class="single-service text-center">
+                        <div class="service-icon"><img src="~/img/solutions/Epose_self_service.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                EPOS & Self Service
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Single integrated cloud platform cloud for managing your hospitality or retail estate.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="epos-self-service"><img src="~/img/solutions/Epose_self_service.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Single integrated cloud platform cloud for managing your hospitality or retail estate.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center">
-                    <div class="service-text">
-                        <h4><a href="stock-control-system">Stock Control</a></h4>
+                <a href="stock-control-system">
+                    <div class="single-service text-center">
+                        <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Stock Control
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Accurate real time stock visibility across multiple sites and locations.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Accurate real time stock visibility across multiple sites and locations.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="HR-time-and-attendance">Human Resources</a></h4>
+                <a href="HR-time-and-attendance">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Human_resources.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Human Resources
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Time and Attendance with Bio-metrics with HR paperless process automation.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="HR-time-and-attendance"><img src="~/img/solutions/Human_resources.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Time and Attendance with Bio-metrics with HR paperless process automation.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="shoppertrak-business-intelligence">Business Intelligence</a></h4>
+                <a href="shoppertrak-business-intelligence">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Business_intelligence.png">  </div>
+                        <div class="service-text">
+                            <h3>
+                                Business Intelligence
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="shoppertrak-business-intelligence"><img src="~/img/solutions/Business_intelligence.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="warehouse-management-system">Warehouse Management</a></h4>
+                <a href="warehouse-management-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Warehouse Management
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="warehouse-management-system"><img src="~/img/solutions/Warehouse_management.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="loss-prevention">Loss Prevention</a></h4>
+                <a href="loss-prevention">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Lose_prevention.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Loss Prevention
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Shrink Management as a Service (SMaaS) designed to help enhance productivity.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="loss-prevention"><img src="~/img/solutions/Lose_prevention.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Shrink Management as a Service (SMaaS) designed to help enhance productivity.</p>
-                    </div>
-                </div>
+                </a>
             </div>
 
         </div>
