--- a/WarehouseEcommerce/Views/Home/Epod.cshtml
+++ b/WarehouseEcommerce/Views/Home/Epod.cshtml
@@ -54,82 +54,94 @@
     <div class="container-fluid pl-30 pr-30">
         <div class="row">
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center">
-                    <div class="service-text">
-                        <h4><a href="mobile-device-management">Mobile Device Management</a></h4>
+                <a href="mobile-device-management">
+                    <div class="single-service text-center">
+                        <div class="service-icon"><img src="~/img/solutions/Mobile_device_management.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Mobile Device Management
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>MDM enables you to manage devices in a way which best suits your organisation security and support needs.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="mobile-device-management"><img src="~/img/solutions/Mobile_device_management.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>MDM enables you to manage devices in a way which best suits your organisation security and support needs.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="stock-control-system">Stock Control</a></h4>
+                <a href="stock-control-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Stock Control
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Accurate real time stock visibility across multiple sites and locations.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Accurate real time stock visibility across multiple sites and locations.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="courier-integration">Courier Integration</a></h4>
+                <a href="courier-integration">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Courier_integration.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Courier Integration
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Improve delivery accuracy and streamline dispatch by pushing address details to your logistics provider.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="courier-integration"><img src="~/img/solutions/Courier_integration.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Improve delivery accuracy and streamline dispatch by pushing address details to your logistics provider.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="mobile-van-sales">Mobile Van Sales</a></h4>
+                <a href="mobile-van-sales">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Mobile_van_sales.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Mobile Van Sales
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Van sales solution effectively manages on-the-road sales operations and payments.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="mobile-van-sales"><img src="~/img/solutions/Mobile_van_sales.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Van sales solution effectively manages on-the-road sales operations and payments.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="yard-management">Yard Management</a></h4>
+                <a href="yard-management">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Yard_management.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Yard Management
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Optimize Your Yard Resources with Intelligent, system-directed dock door management capabilities.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="yard-management"><img src="~/img/solutions/Yard_management.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Optimize Your Yard Resources with Intelligent, system-directed dock door management capabilities.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="fleet-management-system">Fleet Tracking</a></h4>
+                <a href="fleet-management-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Fleet_tracking.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Fleet Tracking
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Visualize your Fleet assets and activity at a glance with live dashboards, mapping and historical driver data.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="fleet-management-system"<img src="~/img/solutions/Fleet_tracking.png"> </a>
-                    </div>
-                    <div class="service-text">
-                        <p>Visualize your Fleet assets and activity at a glance with live dashboards, mapping and historical driver data.</p>
-                    </div>
-                </div>
+                </a>
             </div>
 
         </div>
