--- a/WarehouseEcommerce/Views/Home/RetailSolutions.cshtml
+++ b/WarehouseEcommerce/Views/Home/RetailSolutions.cshtml
@@ -160,91 +160,103 @@
     <div class="container-fluid pl-30 pr-30">
         <div class="row">
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center">
-                    <div class="service-text">
-                        <h4><a href="loss-prevention">Loss Prevention</a></h4>
+                <a href="loss-prevention">
+                    <div class="single-service text-center">
+                        <div class="service-icon"><img src="~/img/solutions/Lose_prevention.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Loss Prevention
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Shrink Management as a Service (SMaaS) designed to help enhance productivity.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="loss-prevention"><img src="~/img/solutions/Lose_prevention.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Shrink Management as a Service (SMaaS) designed to help enhance productivity.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="stock-control-system">Stock Control</a></h4>
+                <a href="stock-control-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Stock Control
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>Accurate real time stock visibility across multiple sites and locations.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>Accurate real time stock visibility across multiple sites and locations.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="epod-system">EPoD</a></h4>
+                <a href="epod-system">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                EPoD
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>
+                                Provides reliable and accurate proof of delivery and collection, enabling signature and image
+                                capture.
+                            </p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>
-                            Provides reliable and accurate proof of delivery and collection, enabling signature and image
-                            capture.
-                        </p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="shoppertrak-business-intelligence">Business Intelligence</a></h4>
+                <a href="shoppertrak-business-intelligence">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Business_intelligence.png"></div>
+                        <div class="service-text">
+                            <h3>
+                                Business Intelligence
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>
+                                Help your business to harness the power of data, inventory and loss prevention and turn
+                                insights into outcomes.
+                            </p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="shoppertrak-business-intelligence"><img src="~/img/solutions/Business_intelligence.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>
-                            Help your business to harness the power of data, inventory and loss prevention and turn
-                            insights into outcomes.
-                        </p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="digital-signage">Digital Signage</a></h4>
+                <a href="digital-signage">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Digital_signage.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                Digital Signage
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>llumineye designed to make high-quality digital signage available to everyone. Ideal for retail, transportation.</p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="digital-signage"><img src="~/img/solutions/Digital_signage.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>llumineye designed to make high-quality digital signage available to everyone. Ideal for retail, transportation.</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="single-service text-center mb-70">
-                    <div class="service-text">
-                        <h4><a href="ecommerce">eCommerce</a></h4>
+                <a href="ecommerce">
+                    <div class="single-service text-center mb-70">
+                        <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"> </div>
+                        <div class="service-text">
+                            <h3>
+                                eCommerce
+                            </h3>
+                        </div>
+                        <div class="service-text">
+                            <p>
+                                Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace
+                                integration.
+                            </p>
+                        </div>
                     </div>
-                    <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
-                    </div>
-                    <div class="service-text">
-                        <p>
-                            Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace
-                            integration.
-                        </p>
-                    </div>
-                </div>
+                </a>
             </div>
 
         </div>
