change WMS Banner and set on all screens Imported from Changeset 2410

--- a/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
@@ -5,13 +5,13 @@
 }
 
 <!-- slider-area-start -->
-<div class="slider-area">
-    <div class="single-slider ptb-150" style="background-image:url(/img/services/warehouse-banner.jpg)"></div>
-    <div class="custom-green" style="padding: 20px; color: #ffffff;">
-        <p class="page-title"><strong>Warehouse Management System</strong></p>
-        <p class="page-subtitle">From Cost Centre To Growth Centre</p>
+    <div class="slider-area">
+        <div class=" warehouse-banner"><img src="~/img/services/warehouse_banner.png"></div>
+        <div class="custom-green" style="padding: 20px; color: #ffffff;">
+            <p class="page-title"><strong>Warehouse Management System</strong></p>
+            <p class="page-subtitle">From Cost Centre To Growth Centre</p>
+        </div>
     </div>
-</div>
 
 <section class="mt-30">
     <div class="container-fluid pl-30 pr-30 custom-max-width">
