add low opacity backgound behind WMS banner image Imported from Changeset 2411

--- a/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
@@ -6,7 +6,7 @@
 
 <!-- slider-area-start -->
     <div class="slider-area">
-        <div class=" warehouse-banner"><img src="~/img/services/warehouse_banner.png"></div>
+         <div class="warehouse-banner" style="background-image:url(/img/services/warehouse_banner_low_opacity.jpg)"><img src="~/img/services/warehouse_banner_top.png"></div>
         <div class="custom-green" style="padding: 20px; color: #ffffff;">
             <p class="page-title"><strong>Warehouse Management System</strong></p>
             <p class="page-subtitle">From Cost Centre To Growth Centre</p>
