--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
@@ -2,7 +2,7 @@
 
 <footer>
     <div>
-        <div class="container logo-slider">
+        <div class="custom-max-width m-auto logo-slider">
                 @foreach (var item in Model)
                 {
 
