upload all manifacturers images and give them fix width Imported from Changeset 2415

--- a/WarehouseEcommerce/Areas/Shop/Content/Site.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/Site.css
@@ -1410,6 +1410,7 @@ ul.mhp-menu {
 .logo-slider {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
